@@ -1,3 +1,8 @@
+rabak-0.6rc1
+- new include/exclude handling via rsync filter
+- patched remote targets (supports now db dumps as well)
+- various bug fixes
+
 rabak-0.5 rc1
 - remote targets are now supported (file only)
 - target objects implemented
